Fix flicker on page load

--- a/src/client/App.module.css
+++ b/src/client/App.module.css
@@ -9,6 +9,16 @@
   box-sizing: border-box;
 }
 
+.loadingContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
 .appLayout {
   width: 100%;
   height: 100%;
